# ngp-xayah

./: CMakeLists.txt  README.md  main.cpp  main.cu  vcpkg.json
cuda/: ngp.device.cu  ngp.device.cuh
modules/: ngp.dataset.nerfsynthetic.ixx  ngp.device.ixx
src/: ngp.device.cpp  ngp.device.cu
